--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "author": "Petr Tichy",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.0",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.4.0",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
